<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/AppName"
            app:layout_constraintEnd_toEndOf="@id/guideLoginRight"
            app:layout_constraintStart_toStartOf="@id/guideLoginLeft"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/book_search" />

        <TextView
            android:id="@+id/AppName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="6dp"
            android:textStyle="bold"
            android:fontFamily="@font/sf_pro_display"
            android:textColor="@color/black"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="@id/guideLoginRight"
            app:layout_constraintStart_toStartOf="@id/guideLoginLeft"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/tvLetsLogin"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:gravity="center"
            android:text="@string/let_s_login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="@id/guideLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/AppName" />

        <TextView
            android:id="@+id/tvDontHaveAnAccount"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_register"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@id/guideLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/tvLetsLogin" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            android:textColorHint="@color/g_black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guideLoginRight"
            app:layout_constraintStart_toStartOf="@id/guideLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvDontHaveAnAccount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/email"
                android:drawableStart="@drawable/ic_outline_email_24"
                android:paddingStart="18dp"
                android:drawablePadding="15dp"
                android:paddingEnd="5dp"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@color/g_blue"
                android:textColor="@color/g_blue"
                android:maxLines="1"
                android:textColorHint="@color/g_black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            app:boxStrokeWidth="1dp"
            android:textColorHint="@color/g_black"
            android:layout_width="0dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleContentDescription="Show Password"
            app:passwordToggleTint="#808080"
            app:layout_constraintEnd_toEndOf="@id/guideLoginRight"
            app:layout_constraintStart_toStartOf="@id/guideLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:paddingStart="18dp"
                android:paddingEnd="5dp"
                android:textColorHint="@color/g_black"
                android:hint="@string/password"
                android:drawableStart="@drawable/ic_baseline_password_24"
                android:drawablePadding="15dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textCursorDrawable="@color/g_blue"
                android:textColor="@color/g_blue"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvForgotPasswordLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            style="@style/h2"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="18dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="@+id/guideLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <ImageView
            android:id="@+id/facebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/facebook_login"
            app:layout_constraintTop_toBottomOf="@id/btnLoginLogin"
            app:layout_constraintStart_toStartOf="@id/guideLoginLeft"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            app:layout_constraintStart_toStartOf="@id/facebookLogin"
            app:layout_constraintTop_toTopOf="@id/facebookLogin"
            app:layout_constraintBottom_toBottomOf="@id/facebookLogin"
            app:layout_constraintEnd_toEndOf="@id/facebookLogin"/>

        <ImageView
            android:id="@+id/googleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/google_login"
            app:layout_constraintTop_toBottomOf="@id/btnLoginLogin"
            app:layout_constraintEnd_toEndOf="@id/guideLoginRight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            app:layout_constraintStart_toStartOf="@id/googleLogin"
            app:layout_constraintTop_toTopOf="@id/googleLogin"
            app:layout_constraintBottom_toBottomOf="@id/googleLogin"
            app:layout_constraintEnd_toEndOf="@id/googleLogin"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFF"
            android:padding="8dp"
            android:text="Login"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideLoginRight"
            app:layout_constraintStart_toStartOf="@+id/guideLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordLogin"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLoginLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09" />



        <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLoginRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.91" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>